--- a/camelclubstyle.css
+++ b/camelclubstyle.css
@@ -50,10 +50,15 @@ a:hover {
 }
 
 .active-season{
-  background-color: #d19137;
-  background-image: radial-gradient(#e9a64e,#d19137);
+  background-color: #e9a64e;
+  background-image: radial-gradient(#e9a64e,#bd7d23);
   color: #161615;
+}
 
+.border-element{
+  border: #e9a64e;
+  border-style: solid;
+  border-width: .5rem;
 }
 
 a.anchor {
