--- a/camelclubstyle.css
+++ b/camelclubstyle.css
@@ -56,13 +56,13 @@ a:hover {
 }
 
 .border-element{
-  border: #e3963133;
+  border: #9f6719;
   border-style: solid;
   border-width: .5rem;
 }
 
 .thin-border{
-  border-color: #e3963133;
+  border: #3e2f1c;
   border-style: solid;
   border-width: .1rem;
 }
