--- a/camelclubstyle.css
+++ b/camelclubstyle.css
@@ -31,6 +31,11 @@ a:hover {
   color: gray;
 }
 
+.lightfwwhite{
+  font-weight: 300;
+  color: white;
+}
+
 .black{
   background-color: #161615;
   color: white;
@@ -126,6 +131,11 @@ l ol, ol ul, ul ol, ul ul {
 .rounded-top-element{
   border-top-right-radius: 20px;
   border-top-left-radius: 20px;
+}
+
+.rounded-bottom-element{
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
 
 #logo{
