--- a/camelclubstyle.css
+++ b/camelclubstyle.css
@@ -52,19 +52,19 @@ a:hover {
 
 .active-OG{
   background-color: #e9a64e;
-  background-image: radial-gradient(#e98f4e, #bd6323);
+  background-image: radial-gradient(#e98f4e, #b16d3d);
   color: #161615;
 }
 
 .active-WOF{
-  background-color: #4ea8e9;
-  background-image: radial-gradient(#3e80be, #275077);
+  background-color: #5481ab;
+  background-image: radial-gradient(#5481ab, #4681b9);
   color: #161615;
 }
 
 .active-3D{
-  background-color: #e9a64e;
-  background-image: radial-gradient(#74937c, #475f4d);
+  background-color: #62856a;
+  background-image: radial-gradient(#62856a, #5a7e63);
   color: #161615;
 }
 
