--- a/camelclubstyle.css
+++ b/camelclubstyle.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css2?family=Changa+One&family=Merriweather+Sans:wght@300;400&display=swap);
+
 body{
   font-family: 'Merriweather Sans', sans-serif;
   background-color:#161615;
