--- a/camelclubstyle.css
+++ b/camelclubstyle.css
@@ -28,6 +28,29 @@ a:hover {
   text-decoration: none;
 }
 
+.hidden1{
+  opacity: 0;
+  transform: translateX(-100%);
+  transition: all 1s;
+}
+
+.hidden1:nth-child(1){
+  transition-delay: 0ms;
+}
+
+.hidden1:nth-child(2){
+  transition-delay: 30ms;
+}
+.hidden1:nth-child(3){
+  transition-delay: 60ms;
+}
+
+.show{
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
+}
+
 .lightfw{
   font-weight: 300;
   color: gray;
@@ -183,9 +206,13 @@ l ol, ol ul, ul ol, ul ul {
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
+@media (prefers-reduced-motion) {
   .scrolling {
     animation: none;
+  }
+
+  .hidden1{
+    transition: none;
   }
 }
 
