--- a/camelclubstyle.css
+++ b/camelclubstyle.css
@@ -28,29 +28,6 @@ a:hover {
   text-decoration: none;
 }
 
-.hidden1{
-  opacity: 0;
-  transform: translateX(-100%);
-  transition: all 1s;
-}
-
-.hidden1:nth-child(1){
-  transition-delay: 0ms;
-}
-
-.hidden1:nth-child(2){
-  transition-delay: 30ms;
-}
-.hidden1:nth-child(3){
-  transition-delay: 60ms;
-}
-
-.show{
-  opacity: 1;
-  filter: blur(0);
-  transform: translateX(0);
-}
-
 .lightfw{
   font-weight: 300;
   color: gray;
@@ -182,14 +159,44 @@ l ol, ol ul, ul ol, ul ul {
 #logo{
   max-height: 48px;
 }
+
 #spacer{
-  min-height: 100px;
+  min-height: 150px;
 }
 
 #landing{
+  display: flex;
   color: white;
-  height: 30vw;
-  min-height: 250px;
+  height: 50vh;
+  align-items: center;
+  justify-content: center;
+}
+
+#scroller{
+  height: 30vh;
+}
+
+.hidden1{
+  opacity: 0;
+  transform: translateX(-25%);
+  transition: all 1s;
+}
+
+/* .hidden1:nth-child(1){
+  transition-delay: 0ms;
+}
+
+.hidden1:nth-child(2){
+  transition-delay: 30ms;
+}
+.hidden1:nth-child(3){
+  transition-delay: 60ms;
+} */
+
+.show{
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
 }
 
 .img_container {
