--- a/camelclubstyle.css
+++ b/camelclubstyle.css
@@ -161,29 +161,29 @@ l ol, ol ul, ul ol, ul ul {
 }
 
 #spacer{
-  height: 20vh;
+  height: 10vh;
+  min-height: 50px;
   /* background-color: #ecc67575; */
 }
 
 #landing{
   display: flex;
-  /* background-color: #356c3090; */
   color: white;
   height: 40vh;
-  min-height: 200px;
   align-items: center;
   justify-content: center;
+  /* background-color: #356c3090; */
 }
 
 #landingscroller{
-  height: 40vh;
+  height: 50vh;
   min-height: 200px;
-  /* background-color: rgba(255, 0, 255, 0.493) */
+  /* background-color: rgba(255, 0, 255, 0.493); */
 }
 
-#scroller{
-  /* background-color: #ffe9c43f; */
-}
+/* #scroller{
+  background-color: #ecc67561;
+} */
 
 .arrows {
   width: 60px;
@@ -209,19 +209,8 @@ l ol, ol ul, ul ol, ul ul {
 .hidden1{
   opacity: 0;
   transform: translateX(-25%);
-  transition: transform 1s, color 250ms, background-color 250ms;
+  transition: transform 1s, color 400ms;
 }
-
-/* .hidden1:nth-child(1){
-  transition-delay: 0ms;
-}
-
-.hidden1:nth-child(2){
-  transition-delay: 30ms;
-}
-.hidden1:nth-child(3){
-  transition-delay: 60ms;
-} */
 
 .show{
   opacity: 1;
@@ -250,7 +239,6 @@ l ol, ol ul, ul ol, ul ul {
 @media (prefers-reduced-motion: no-preference) {
   .scrolling {
     list-style: none;
-    display: inline-flex; 
     animation: slide 80s linear infinite;
     display: inline-block;
     padding-right: 10px;
