--- a/camelclubstyle.css
+++ b/camelclubstyle.css
@@ -206,8 +206,8 @@ l ol, ol ul, ul ol, ul ul {
 
 .hidden1{
   opacity: 0;
-  transform: translateX(-10%);
-  transition: transform 500ms, color 400ms, background-color 400ms;
+  transform: translateX(-15%);
+  transition: transform 1s, color 400ms, background-color 400ms;
 }
 
 .show{
