--- a/camelclubstyle.css
+++ b/camelclubstyle.css
@@ -65,7 +65,7 @@ a:hover {
 
 .active-3D{
   background-color: #61544a;
-  background-image: radial-gradient(#61544a, #564537);
+  background-image: radial-gradient(#6d5d52, #362c23);
   color: #161615;
 }
 
@@ -196,6 +196,7 @@ l ol, ol ul, ul ol, ul ul {
   stroke: #bc873c;
   fill: transparent;
   stroke-width: 1px;
+  stroke-linecap: round;
   animation: arrow 2s infinite;
   -webkit-animation: arrow 2s infinite; 
 }
@@ -206,7 +207,7 @@ l ol, ol ul, ul ol, ul ul {
 
 .hidden1{
   opacity: 0;
-  transform: translateX(-15%);
+  transform: translateX(-10%);
   transition: transform 500ms, color 400ms, background-color 400ms;
 }
 
@@ -319,7 +320,20 @@ l ol, ol ul, ul ol, ul ul {
     justify-content: center;
   }
 }
-
+@media (max-width: 575px) {
+  #spacer{
+    min-height: 32px;
+  }
+  #landing{
+    height: 35vh;
+  }
+  #landingscroller{
+    height: 55vh;
+  }
+  .arrows {
+    bottom: 60px;
+  }
+}
 @media (max-width: 400px) {
   .card-body {
     padding: 0.5rem;
@@ -327,20 +341,5 @@ l ol, ol ul, ul ol, ul ul {
 
   #logo{
     height: 32px;
-  }
-
-  #spacer{
-    min-height: 32px;
-  }
-
-  #landing{
-    height: 35vh;
-  }
-  #landingscroller{
-    height: 55vh;
-  }
-
-  .arrows {
-    bottom: 60px;
   }
 }
