--- a/camelclubstyle.css
+++ b/camelclubstyle.css
@@ -159,6 +159,10 @@ l ol, ol ul, ul ol, ul ul {
   border-bottom-left-radius: 20px;
 }
 
+.grow:hover, .grow:active{
+  transform: scale(1.1);
+}
+
 .custom-toggler .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(188, 135, 60)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
