--- a/camelclubstyle.css
+++ b/camelclubstyle.css
@@ -181,21 +181,20 @@ l ol, ol ul, ul ol, ul ul {
 
 #spacer{
   height: 10vh;
-  min-height: 85px;
   /* background-color: #ecc67575; */
 }
 
 #landing{
   display: flex;
   color: white;
-  height: 50vh;
+  height: 45vh;
   align-items: center;
   justify-content: center;
   /* background-color: #356c3090; */
 }
 
 #landingscroller{
-  height: 40vh;
+  height: 45vh;
   /* background-color: rgba(255, 0, 255, 0.493); */
 }
 
@@ -209,7 +208,7 @@ l ol, ol ul, ul ol, ul ul {
   position: absolute;
   left: 50%;
   margin-left: -30px;
-  bottom: 50px;
+  bottom: 40px;
 }
 
 .arrows path {
@@ -331,6 +330,12 @@ l ol, ol ul, ul ol, ul ul {
   }
 }
 
+@media(max-height: 650px){
+  .arrows{
+    visibility: hidden;
+  }
+}
+
 @media (max-width: 767px) {
   .navbar-collapse {
     text-align: center;
@@ -350,9 +355,6 @@ l ol, ol ul, ul ol, ul ul {
   #landingscroller{
     height: 55vh;
   } */
-  .arrows {
-    bottom: 60px;
-  }
 }
 @media (max-width: 400px) {
   .card-body {
