--- a/camelclubstyle.css
+++ b/camelclubstyle.css
@@ -77,7 +77,7 @@ a:hover {
 
 .active-3D{
   background-color: #61544a;
-  background-image: radial-gradient(#6d5d52, #362c23);
+  background-image: radial-gradient(#63574f, #50443d);
   color: var(--black);
 }
 
@@ -159,10 +159,6 @@ l ol, ol ul, ul ol, ul ul {
   border-bottom-left-radius: 20px;
 }
 
-.grow:hover, .grow:active{
-  transform: scale(1.1);
-}
-
 .custom-toggler .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(188, 135, 60)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
@@ -224,15 +220,22 @@ l ol, ol ul, ul ol, ul ul {
   max-height: 400px;
 }
 
+.grow-button:hover, .grow-button:active{
+  transform: scale(1.1);
+  background-color: white;
+}
+
 .hidden1{
   opacity: 0;
-  transform: translateX(-10%);
+  transform: translateY(-10%);
+  transform: scale(.9);
   transition: transform 500ms, color 400ms, background-color 400ms;
 }
 
 .show{
   opacity: 1;
-  transform: translateX(0);
+  transform: scale(1);
+  transform: translateY(0);
 }
 
 .img_container {
@@ -355,6 +358,7 @@ l ol, ol ul, ul ol, ul ul {
   #landingscroller{
     height: 55vh;
   } */
+
 }
 @media (max-width: 400px) {
   .card-body {
