--- a/camelclubstyle.css
+++ b/camelclubstyle.css
@@ -68,30 +68,29 @@ a:hover {
   background-color: #e9a64e;
   background-image: radial-gradient(#ecc675, #c69136);
   color: var(--black);
+  border-color: #ffffff50 !important;
 }
 
 .active-WOF{
   background-color: #84543b;
   background-image: radial-gradient(#84543b, #6c4330);
   color: var(--black);
-}
+  border-color: #ffffff50 !important;
+} 
 
 .active-3D{
   background-color: #61544a;
   background-image: radial-gradient(#63574f, #50443d);
   color: var(--black);
-}
-
-.border-element{
-  border: white;
-  border-style: solid;
-  border-width: .5rem;
+  border-color: #ffffff50 !important;
 }
 
 .thin-border{
-  border: #3e2f1c;
-  border-style: solid;
-  border-width: .1rem;
+  border: .1rem solid #3e2f1c;
+}
+
+.thin-border:hover{
+  border-color: #ffffff50;
 }
 
 a.anchor {
@@ -228,7 +227,8 @@ l ol, ol ul, ul ol, ul ul {
 
 .hidden1{
   transform: scale(.9);
-  transition: transform 500ms, color 400ms, background-color 400ms;
+  transform-origin: bottom;
+  transition: transform 600ms, color 400ms, background-color 400ms;
 }
 
 .show{
@@ -251,6 +251,10 @@ l ol, ol ul, ul ol, ul ul {
 
   .hidden1{
     transition: none;
+  }
+
+  .grow-button:hover{
+    transform: none;
   }
 }
 
