--- a/camelclubstyle.css
+++ b/camelclubstyle.css
@@ -36,8 +36,44 @@ a:hover {
   text-decoration: none;
 }
 
-.custom-toggler .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(188, 135, 60)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+.custom-toggler{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 25px;
+}
+
+.bar {
+  height: 2px;
+  width: 25px;
+  background-color: var(--camel);
+  transition: all 100ms ease-in-out;
+  border-radius: 20px;
+}
+
+.x:nth-of-type(1) {
+  transition: all 100ms ease-in-out;
+  margin-left: .5rem;
+  scale: .9;
+  transform: rotate(45deg);
+  transform-origin: top left;
+  width: 25px;
+}
+
+.x:nth-of-type(2) {
+  transition: all 100ms ease-in-out;
+  transform-origin: center;
+  width: 0;
+}
+
+.x:nth-of-type(3) {
+  transition: all 100ms ease-in-out;
+  margin-left: .5rem;
+  scale: .9;
+  transform: rotate(-45deg);
+  transform-origin: bottom left;
+  width: 25px;
 }
 
 .custom-toggler.navbar-toggler {
